[project]
name = "autopunch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.28.1",
    "typer>=0.15.1",
]

[project.optional-dependencies]
gcp = ["google-cloud-scheduler>=2.15.1"]

[project.scripts]
autopunch = "autopunch:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.32.0",
]
